# Proyect_V_Regression_Team3

./: .gitignore  README.md  pyproject.toml
Docs/: Proyect_V_Regression_Team3.git.JJ.docx  ~$oyect_V_Regression_Team3.git.JJ.docx  ~WRL3537.tmp
Docs/Proyect_V_Regression_Team3_Docs_JJ/: Proyect_V_Regression_Team3_Docs_JJ.md
Docs/Proyect_V_Regression_Team3_Docs_JJ/.obsidian/: workspace.json
data/: X_test.csv  X_train.csv  X_val.csv  best_hyperparams.csv  cv_results.csv  y_test.csv  y_train.csv  y_val.csv
models/: baseline_best_model.joblib  best_baseline_pipeline.pkl  best_model_XGBoost.pkl  optimized_model.pkl  preprocessor.joblib
noteboooks/: 00_data_preparation (1).ipynb  01_eda.ipynb  01_new_eda.ipynb  02_eda_bivariant.ipynb  02_modelation.ipynb  03_analisis_categoricas.ipynb  03_cross_validation.ipynb  04_optuna.ipynb  04_preprocessing.ipynb  05_baseline_model.ipynb  EDA_04_categorical_visualizations.ipynb  eda.ipynb
src/: main.py
src/app/: main.py  streamlit_app.py
